Fixing forecast alignment

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,10 @@
 body {
   background-color: #f9f7fe;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Roboto", sans-serif;
+}
+
+a {
+  color: rgb(72, 184, 72);
 }
 
 header {
@@ -31,7 +35,7 @@ main {
 }
 
 .search-form-button {
-  background-color: blue;
+  background-color: rgb(72, 184, 72);
   font-size: 16px;
   color: white;
   border: none;
@@ -45,9 +49,9 @@ main {
 }
 
 .current-city {
+  margin: 0;
   font-size: 38px;
   line-height: 48px;
-  margin: 0;
 }
 
 .current-details {
@@ -74,8 +78,6 @@ main {
 .weather-app-icon {
   width: 88px;
   height: 88px;
-  display: block;
-  margin: 0 auto;
 }
 
 .weather-forecast-temperatures {
@@ -83,7 +85,7 @@ main {
   color: rgb(72, 184, 72);
   margin-top: 10px;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
 }
 
 .weather-app-unit {
@@ -92,7 +94,6 @@ main {
 }
 
 .weather-forecast {
-  display: flex;
   justify-content: space-around;
   margin-top: 30px;
 }
